<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".WelcomeFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="66dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="2dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_free"
                android:padding="2dp"
                style="@style/Widget.SpotifyClone555.Button"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="2dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_continue_with_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_google"
                android:padding="2dp"
                style="@style/Widget.SpotifyClone555.Button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="2dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_continue_with_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_facebook"
                android:padding="2dp"
                style="@style/Widget.SpotifyClone555.Button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="2dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:padding="2dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>