<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="7dp"
    android:gravity="center"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="7dp">

        <ImageView
            android:id="@+id/imageViewPasswordIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="45"
            android:src="@drawable/ic_baseline_person_24" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="250dp"
            android:layout_weight="5"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="7dp">

        <ImageView
            android:id="@+id/imageViewEmailIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="45"
            android:src="@drawable/ic_baseline_lock_24" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="250dp"
            android:layout_weight="5"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_margin="7dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have"
            android:textSize="12sp" >
        </TextView>

        <Button
            android:id="@+id/btn_alreadyhave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/click_here"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>

</LinearLayout>